@@ -1,5 +1,5 @@
 AUX lmms-0.4.10-unembedfltk.patch 2778 SHA256 233fb78db882fae018d26c421ef543edb3c24062c1198cedb96ce564b1eb2893 SHA512 bfd9ea25852cd6e23150c8f5030f4b4159f006bf3b0a6954c94a7c31c2756ced8b4c58ae43632f0c6ae6a21e1ebebb983dc71b2ddaad29c71fe3b89ac9dc9d42 WHIRLPOOL 862ad00ab7f5f675a35ecb0059fa9b8ceee258f77f44f6f46fc05dac5ddb981c912b73cefb6f50342fc86f8ef1281dd4d9595cc771cda85e0f1601d432d81852
 EBUILD lmms-0.4.9999.ebuild 2078 SHA256 b43140662d52a909e3c956c58c1203f75b99cc5a7a72fa89b1f85c08c40a7e42 SHA512 a3b0a288af7b85fb609cabe419157e4ab23cdd1cce654245665c76277f9caca8cbb67571bc35e394c0e7c504dccf0908d78c6e43f4bb336fdb1452a8a36ea03d WHIRLPOOL 56899936741f2f933a90fe37eab9d56a2f74839a490d53041c5f92a301bc8756aa80f913dbe95966eadf47493bb437e85472db61c648b674857b178eb019c953
-EBUILD lmms-9999-r1.ebuild 1482 SHA256 a2ce0baab287cdcf2a6d453ddece6e5d7855cdbc9339073ec103b2230eee31fb SHA512 e387363f553010c6027ea98faa211975ce8dd8906c3b3550c44461ff0828a5124439a9bfa9c4060938db27373011ffc2ec7314e4619f5aaf2ac21743904a0e61 WHIRLPOOL c8aff9f06c5042b6d384e1adb158efdcef92b774e1a8af9fb508ec0bb1331c59f4d544796a8f0d9023c710c20db9561c60abf50c7aecf64aca7407050831b227
-MISC ChangeLog 2335 SHA256 246f64b56d520e1e513d5cdcf8f67f8c49e737b90763fdc5d2fc90b6ac1fc2ee SHA512 99139546b693f0b0ff1cc1b5c179c45ec8ac33916e506e7bf243faf2e79902d2510fb91429e4d1c8e31e7bb264bbdb9b1080f6138a48f049858550ab226b0576 WHIRLPOOL 4dcdcd252fae5e504a9157ab4bad51e9541ca57ca50d37aa5823a23bc2f7d59f54e2cb1743610164cc360125892a369ac7eef7a7bac01a702d2a26367c458851
+EBUILD lmms-9999-r1.ebuild 1714 SHA256 63d3d6238be8a58302f93ace8d6346c61f2cf2f33a03494da9f020c555fa0a28 SHA512 e5d7d74070d9e3192347ee7d5d110ec7ddcfad3337f8dffa8aaf257010276ec4c7894d3e6245e2d3f195c67a5b83d99bb6fb77dbd1a143a9843485195b055458 WHIRLPOOL 716aa0d42c43b0d3b3608dc17b125929d256a49862388f217dd594e6cb4df2c684d46d5db8eabd60ceac150f45f77e1915f2384474326d4133891a7c81781a31
+MISC ChangeLog 2498 SHA256 2668cce3381436e076a9afd78ed0779c93d992f5af8d36b55d6ff14d8b2e4072 SHA512 0e52b863f4d5370094c560696791a99d8021216549675e0a203279fbdf376e23b38cbb452c7c234a1f6e08cdd60e9287b00d5373c713c41edf67477ec269ac07 WHIRLPOOL 67b203c9ce7858f00aa38be4736c80f36a4ce272ebf76015ad17844ee200fff39b1600976356ab12be067c75770e33df465a892c776efd11defb94b7c81e36da
 MISC metadata.xml 358 SHA256 d2f85efac83d2420f1483593cfda4f3bf0ecd352d035ddab08f1467286ba6608 SHA512 d3e47010b673a04f9e39eb2808d936582bb31098b37a5324898c6a498bf18edacac9cddf610b9d6d550a9f0e542d5e43e259e09c5d88b52623f9d150792115e7 WHIRLPOOL 5e94c98725163bc17aeb041b10993dd7ca850db4afbab791ec7d47c0927fda814d9a1f49797b0e8395b3187b5aa7ea8f942eed86e4b66209bcf2428243896dd0
