@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Mar 2013; Dominique Michel <dominique_free@users.sourceforge.net>
+  lmms-9999-r1.ebuild:
+  Add built-in zynaddsubfx (Thanks to Miroslav Sulc for the patch).
+
   29 Mar 2013; Dominique Michel <dominique_free@users.sourceforge.net>
   lmms-9999-r1.ebuild:
   Commented EGIT_BRANCH: not needed for Master.
